--- a/app/syd_travel/syd_travel.html
+++ b/app/syd_travel/syd_travel.html
@@ -1,12 +1,12 @@
 <!--<label>Name:</label>-->
-    <!--<input ng-model="firstName" type="text"/>-->
-    <!--<input ng-model="lastName" type="text"/>-->
+<!--<input ng-model="firstName" type="text"/>-->
+<!--<input ng-model="lastName" type="text"/>-->
 
 <!--Hello {{firstName}}   {{lastName}}-->
-<div id="container" >
+<div class="container" id="container1">
     <div class="nav-menu nav nav-pills">
         <div class="btn-group" uib-dropdown dropdown-append-to-body>
-            <button id="busDropdown" type="button" class="btn btn-primary" uib-dropdown-toggle >
+            <button id="busDropdown" type="button" class="btn btn-primary" uib-dropdown-toggle>
                 Bus trend <span class="caret"></span>
             </button>
             <ul class="uib-dropdown-menu" role="menu" aria-labelledby="btn-append-to-body">
@@ -28,12 +28,12 @@
     <div id="map-canvas"></div>
 </div>
 <!--<ul>-->
-    <!--<li ng-repeat="country in countries">-->
-        <!--{{country.name}} -- population : {{country.population}}-->
-    <!--</li>-->
+<!--<li ng-repeat="country in countries">-->
+<!--{{country.name}} -- population : {{country.population}}-->
+<!--</li>-->
 <!--</ul>-->
 
 <!--<form ng-submit="addName()">-->
-    <!--<input type="text" ng-model="enteredName"/>-->
-    <!--<input type="submit" value="Add">-->
+<!--<input type="text" ng-model="enteredName"/>-->
+<!--<input type="submit" value="Add">-->
 <!--</form>-->
