--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>Home</a>
                 </li>
-                <li><a href="#">About</a></li>
+                <li><a href="aboutus.html"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>About</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"
                        role="button" aria-haspopup="true" aria-expanded="false">
@@ -49,7 +49,7 @@
                         <li><a href="#">Weekend Brunch</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contactus.html">Contact</a></li>
             </ul>
         </div>
     </div>
@@ -135,7 +135,7 @@
                 <h5>Links</h5>
                 <ul class="list-unstyled">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="aboutus.html">About</a></li>
                     <li><a href="#">Menu</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
