--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
+            <a class="navbar-brand" href="#"><img src="img/logo.png" height=30 width=41></a>
         </div>
         <div class="navbar-collapse collapse" id="navbar">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>Home</a>
                 </li>
-                <li><a href="aboutus.html"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>About</a></li>
+                <li><a href="aboutus.html"><span class="glyphicon glyphicon-info-sign"
+                                                 aria-hidden="true"></span>About</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"
                        role="button" aria-haspopup="true" aria-expanded="false">
@@ -51,6 +52,15 @@
                 </li>
                 <li><a href="contactus.html">Contact</a></li>
             </ul>
+            <form class="navbar-form navbar-right">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Email">
+                    <input type="text" class="form-control" placeholder="Password">
+                </div>
+                <input type="checkbox" class="form-control" name="remember">
+                <label class="label">Remember me</label>
+                <button type="submit" class="btn btn-info">Sign in</button>
+            </form>
         </div>
     </div>
 </nav>
@@ -68,7 +78,13 @@
                 <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our
                     lipsmacking creations will tickle your culinary senses!</p>
             </div>
-            <div class="col-xs-12  col-sm-4">
+            <div class="col-xs-6  col-sm-2">
+                <p style="padding:20px;"></p>
+                <img src="img/logo.png" class="img-responsive">
+            </div>
+            <div class="col-xs-6  col-sm-2">
+                <p style="padding:40px;"></p>
+                <Button class="btn btn-warning">Reserve Table</Button>
             </div>
         </div>
     </div>
@@ -82,12 +98,25 @@
             <h3 align=center>Our Lipsmacking Culinary Creations</h3>
         </div>
         <div class="col-xs-12 col-sm-9 col-sm-pull-3">
-            <h2>Uthappizza</h2>
+            <div class="media">
+                <div class="media-left media-middle">
+                    <a href="#">
+                        <img class="media-object img-thumbnail"
+                             src="img/uthappizza.png" alt="Uthappizza">
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h2 class="media-heading">Uthappizza <span class="label label-danger">Hot</span></h2>
+                    <span class="badge">$4.99</span>
 
-            <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe
-                vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                    <p>A unique combination of Indian Uthappam (pancake) and
+                        Italian pizza, topped with Cerignola olives, ripe vine
+                        cherry tomatoes, Vidalia onion, Guntur chillies and
+                        Buffalo Paneer.</p>
 
-            <p><a href="#">More &raquo;</a></p>
+                    <p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -99,13 +128,28 @@
             <h3 align=center>This Month's Promotions</h3>
         </div>
         <div class="col-xs-12 col-sm-9">
-            <h2>Weekend Grand Buffet</h2>
+            <div class="media">
+                <div class="media-body">
+                    <h2>Weekend Grand Buffet<span class="label label-danger">New</span></h2>
 
-            <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six
-                main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per
-                person </p>
+                    <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing
+                        appetizers,
+                        six
+                        main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just
+                        $19.99
+                        per
+                        person </p>
 
-            <p><a href="#">More &raquo;</a></p>
+                    <p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
+                </div>
+                <div class="media-right media-middle">
+                    <a href="#">
+                        <img class="media-object img-thumbnail"
+                             src="img/buffet.png" alt="Grand Buffet">
+                    </a>
+                </div>
+            </div>
+
         </div>
     </div>
 
@@ -116,14 +160,59 @@
             <h3 align=center>Meet our Culinary Specialists</h3>
         </div>
         <div class="col-xs-12 col-sm-9 col-sm-pull-3">
-            <h2>Alberto Somayya</h2>
-            <h4>Executive Chef</h4>
+            <div class="media">
+                <div class="media-left media-middle">
+                    <a href="#">
+                        <img class="media-object img-thumbnail"
+                             src="img/alberto.png" alt="Alberto Somayya">
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h2 class="media-heading">Alberto Somayya</h2>
+                    <h4>Executive Chef</h4>
 
-            <p>Award winning three-star Michelin chef with wide International experience having worked closely with
-                whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion
-                experiences. </p>
+                    <p>Award winning three-star Michelin chef with wide
+                        International experience having worked closely with
+                        whos-who in the culinary world, he specializes in
+                        creating mouthwatering Indo-Italian fusion experiences.
+                    </p>
 
-            <p><a href="#">More &raquo;</a></p>
+                    <p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row row-content">
+        <div class="col-xs-12 col-sm-3 col-sm-push-9">
+            <p style="padding:20px;"></p>
+
+            <h3 align=center>Reserve a Table</h3>
+        </div>
+        <div class="col-xs-12 col-sm-9 col-sm-pull-3">
+            <form class="form-inline">
+
+            </form>
+            <div class="media">
+                <div class="media-left media-middle">
+                    <a href="#">
+                        <img class="media-object img-thumbnail"
+                             src="img/alberto.png" alt="Alberto Somayya">
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h2 class="media-heading">Alberto Somayya</h2>
+                    <h4>Executive Chef</h4>
+
+                    <p>Award winning three-star Michelin chef with wide
+                        International experience having worked closely with
+                        whos-who in the culinary world, he specializes in
+                        creating mouthwatering Indo-Italian fusion experiences.
+                    </p>
+
+                    <p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
+                </div>
+            </div>
         </div>
     </div>
 </div>
