--- a/menu.html
+++ b/menu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="">
+<html lang="en" ng-app="confusionApp">
 
 <head>
     <meta charset="utf-8">
@@ -9,12 +9,13 @@
          content must come *after* these tags -->
     <title>Ristorante Con Fusion: Menu</title>
     <!-- Bootstrap -->
+    <!-- build:css styles/main.css -->
     <link href="app/assets/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="app/assets/lib/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="css/font-awesome.css" rel="stylesheet">
     <link href="css/bootstrap-social.css" rel="stylesheet">
     <link href="css/mystyles.css" rel="stylesheet">
-
+    <!-- endbuild -->
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -26,73 +27,66 @@
 <body>
 
 <div class="container">
-    <div class="row row-content" ng-init="
-                         dishes=[
-                         {
-                           name:'Uthapizza',
-                           image: 'img/uthapizza.png',
-                           category: 'mains',
-                           label:'Hot',
-                           price:'4.99',
-                           description:'A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.',
-                           comment: ''
-                        },
-                        {
-                           name:'Zucchipakoda',
-                           image: 'img/zucchipakoda.png',
-                           category: 'appetizer',
-                           label:'',
-                           price:'1.99',
-                           description:'Deep fried Zucchini coated with mildly spiced Chickpea flour batter accompanied with a sweet-tangy tamarind sauce',
-                           comment: ''
-                        },
-                        {
-                           name:'Vadonut',
-                           image: 'img/vadonut.png',
-                           category: 'appetizer',
-                           label:'New',
-                           price:'1.99',
-                           description:'A quintessential ConFusion experience, is it a vada or is it a donut?',
-                           comment: ''
-                        },
-                        {
-                           name:'ElaiCheese Cake',
-                           image: 'img/elaicheesecake.png',
-                           category: 'dessert',
-                           label:'',
-                           price:'2.99',
-                           description:'A delectable, semi-sweet New York Style Cheese Cake, with Graham cracker crust and spiced with Indian cardamoms',
-                           comment: ''
-                        }
-                        ]">
+    <div class="row row-content" ng-controller="MenuController">
         <div class="col-xs-12">
-            <ul class="media-list">
-                <li class="media" ng-repeat="dish in dishes">
-                    <div class="media-left media-middle">
-                        <a href="#">
-                            <img class="media-object img-thumbnail"
-                                 ng-src={{dish.image}} alt="Uthappizza">
-                        </a>
-                    </div>
-                    <div class="media-body">
-                        <h2 class="media-heading">{{dish.name}}
-                            <span class="label label-danger">{{dish.label}}</span>
-                            <span class="badge">{{dish.price | currency}}</span></h2>
-
-                        <p>{{dish.description}}</p>
-
-                        <p>Comment: {{dish.comment}}</p>
-
-                        <p>Type your comment:
-                            <input type="text" ng-model="dish.comment"></p>
-                    </div>
-                </li>
+            <button ng-click="toggleDetails()" class="btn btn-xs btn-primary pull-right" type="button">
+                {{showDetails ? 'Hide Details':'Show Details'}}
+            </button>
+            <ul class="nav nav-tabs" role="tablist">
+                <li role="presentation"
+                    ng-class="{active:isSelected(1)}">
+                    <a ng-click="select(1)"
+                       aria-controls="all menu"
+                       role="tab">The Menu</a></li>
+                <li role="presentation"
+                    ng-class="{active:isSelected(2)}">
+                    <a ng-click="select(2)"
+                       aria-controls="appetizers"
+                       role="tab">Appetizers</a></li>
+                <li role="presentation"
+                    ng-class="{active:isSelected(3)}">
+                    <a ng-click="select(3)"
+                       aria-controls="mains"
+                       role="tab">Mains</a></li>
+                <li role="presentation"
+                    ng-class="{active:isSelected(4)}">
+                    <a ng-click="select(4)"
+                       aria-controls="desserts"
+                       role="tab">Desserts</a></li>
             </ul>
+            <div class="tab-content">
+                <ul class="media-list">
+                    <li class="media" ng-repeat="dish in dishes| filter:filtText">
+                        <div class="media-left media-middle">
+                            <a href="#">
+                                <img class="media-object img-thumbnail"
+                                     ng-src={{dish.image}} alt="Uthappizza">
+                            </a>
+                        </div>
+                        <div class="media-body">
+                            <h2 class="media-heading">{{dish.name}}
+                                <span class="label label-danger">{{dish.label}}</span>
+                                <span class="badge">{{dish.price | currency}}</span></h2>
+
+                            <p ng-show="showDetails">{{dish.description}}</p>
+
+                            <!--<p>Comment: {{dish.comment}}</p>-->
+
+                            <!--<p>Type your comment:-->
+                            <!--<input type="text" ng-model="dish.comment"></p>-->
+                        </div>
+                    </li>
+                </ul>
+            </div>
+
+
         </div>
     </div>
 </div>
-
+<!-- build:js scripts/main.js -->
 <script src="app/bower_components/angular/angular.min.js"></script>
+<script src="app.js"></script>
+<!-- endbuild -->
 </body>
 
 </html>
