moved non-required files

--- a/ang-app-example/menu.html
+++ b/ang-app-example/menu.html
@@ -10,8 +10,8 @@
     <title>Ristorante Con Fusion: Menu</title>
     <!-- Bootstrap -->
     <!-- build:css styles/main.css -->
-    <link href="app/assets/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="app/assets/lib/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="../app/assets/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../app/assets/lib/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="css/font-awesome.css" rel="stylesheet">
     <link href="css/bootstrap-social.css" rel="stylesheet">
     <link href="css/mystyles.css" rel="stylesheet">
@@ -84,7 +84,7 @@
     </div>
 </div>
 <!-- build:js scripts/main.js -->
-<script src="app/bower_components/angular/angular.min.js"></script>
+<script src="../app/bower_components/angular/angular.min.js"></script>
 <script src="app.js"></script>
 <!-- endbuild -->
 </body>
