--- a/ang-app-example/aboutus.html
+++ b/ang-app-example/aboutus.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="app/assets/lib/bootstrap/css/bootstrap-theme.css">
     <link href="css/font-awesome.css" rel="stylesheet">
     <link href="css/bootstrap-social.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/mystyles.css">
+    <link rel="stylesheet" href="/ang-app-example/css/mystyles.css">
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 </head>
@@ -276,7 +276,7 @@
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="js/bootstrap.min.js"></script>
+<script src="app/assets/lib/bootstrap/bootstrap.min.js"></script>
 </body>
 
 </html>
