--- a/ang-app-example/contactus.html
+++ b/ang-app-example/contactus.html
@@ -127,8 +127,8 @@
                     <div class="col-sm-10">
                         <input type="text" class="form-control" id="firstname" name="firstname"
                                placeholder="Enter First Name" ng-model="feedback.firstname">
-                        <span ng-show="feedbackForm.firstname.$error.required && !feedbackForm.firstname.$pristine"
-                              class="help-block">Your First name is required.</span>
+                <span ng-show="feedbackForm.firstname.$error.required && !feedbackForm.firstname.$pristine"
+                      class="help-block">Your First name is required.</span>
                     </div>
                 </div>
                 <div class="form-group"
@@ -138,8 +138,8 @@
                     <div class="col-sm-10">
                         <input type="text" class="form-control" id="lastname" name="lastname"
                                placeholder="Enter Last Name" ng-model="feedback.lastname">
-                        <span ng-show="feedbackForm.lastname.$error.required && !feedbackForm.lastname.$pristine"
-                              class="help-block">Your Last name is required.</span>
+                <span ng-show="feedbackForm.lastname.$error.required && !feedbackForm.lastname.$pristine"
+                      class="help-block">Your Last name is required.</span>
                     </div>
                 </div>
                 <div class="form-group">
@@ -166,12 +166,12 @@
                     <div class="col-sm-10">
                         <input type="email" class="form-control" id="emailid" name="emailid" placeholder="Email"
                                ng-model="feedback.email" required>
-                        <span ng-show="feedbackForm.emailid.$invalid && !feedbackForm.emailid.$pristine"
-                              class="glyphicon glyphicon-remove form-control-feedback" aria-hidden="true"></span>
-                        <span ng-show="(feedbackForm.emailid.$invalid ||
-                                        feedbackForm.emailid.$error.required) &&
-                                        !feedbackForm.emailid.$pristine"
-                              class="help-block">Enter a valid email address.</span>
+                <span ng-show="feedbackForm.emailid.$invalid && !feedbackForm.emailid.$pristine"
+                      class="glyphicon glyphicon-remove form-control-feedback" aria-hidden="true"></span>
+                <span ng-show="(feedbackForm.emailid.$invalid ||
+                feedbackForm.emailid.$error.required) &&
+                !feedbackForm.emailid.$pristine"
+                      class="help-block">Enter a valid email address.</span>
                     </div>
                 </div>
                 <div class="form-group" ng-class="{ 'has-error' : invalidChannelSelection }">
@@ -193,8 +193,8 @@
                     <label for="feedback" class="col-sm-2 control-label">Your Feedback</label>
 
                     <div class="col-sm-10">
-                        <textarea class="form-control" id="feedback" name="feedback" rows="12"
-                                  ng-model="feedback.comments"></textarea>
+                <textarea class="form-control" id="feedback" name="feedback" rows="12"
+                          ng-model="feedback.comments"></textarea>
                     </div>
                 </div>
                 <div class="form-group">
@@ -276,6 +276,7 @@
 <script src="app/bower_components/angular/angular.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="app/assets/lib/bootstrap/bootstrap.min.js"></script>
+<script src="app.js"></script>
 </body>
 
 </html>
